--- a/sass/_mobile-menu.scss
+++ b/sass/_mobile-menu.scss
@@ -4,8 +4,9 @@
   @media (min-width: 768px) {
     padding: 10px 0;
   }
+
   @media (min-width: 1200px) {
-    display: none;
+    padding: 5px 0;
   }
 }
 
@@ -41,6 +42,10 @@
   @media (min-width: 768px) {
     display: block;
   }
+
+  @media (min-width: 1200px) {
+    display: none;
+  }
 }
 
 .mobile-menu_container {
@@ -67,6 +72,10 @@
 
   @media (min-width: 768px) {
     padding-top: 15px;
+  }
+
+  @media (min-width: 1200px) {
+    display: none;
   }
 }
 
@@ -115,34 +124,6 @@
   }
 }
 
-.buynow-button-tablet {
-  display: block;
-  margin: 0 20px;
-  width: 152px;
-  height: 42px;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  background-color: $default_button_color;
-  font-weight: 600;
-  line-height: 17.07px;
-  font-size: 14px;
-  transition: background-color 300ms, color 300ms;
-  display: none;
-
-  &:hover {
-    background-color: $hover_button_color;
-  }
-
-  &:focus {
-    background-color: $hover_button_color;
-    color: $alternative_text_color;
-  }
-
-  @media (min-width: 768px) {
-    display: block;
-  }
-}
-
 .mobile-menu_list {
   text-align: center;
   padding: 0;
@@ -172,5 +153,35 @@
   @media (min-width: 768px) {
     font-size: 48px;
     line-height: 100%;
+  }
+}
+
+// tablet
+
+.buynow-button-tablet {
+  display: block;
+  margin: 0 20px;
+  width: 152px;
+  height: 42px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  background-color: $default_button_color;
+  font-weight: 600;
+  line-height: 17.07px;
+  font-size: 14px;
+  transition: background-color 300ms, color 300ms;
+  display: none;
+
+  &:hover {
+    background-color: $hover_button_color;
+  }
+
+  &:focus {
+    background-color: $hover_button_color;
+    color: $alternative_text_color;
+  }
+
+  @media (min-width: 768px) {
+    display: block;
   }
 }
