--- a/sass/_contacts.scss
+++ b/sass/_contacts.scss
@@ -11,6 +11,8 @@
   position: relative;
   top: -345px;
   padding: 0;
+  margin-left: auto;
+  margin-right: auto;
 
   @media (min-width: 768px) {
     display: flex;
@@ -18,7 +20,7 @@
 }
 
 .contacts_list-item {
-  max-width: 280px;
+  width: 280px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -39,6 +41,16 @@
       margin-bottom: 0;
     }
   }
+
+  @media (min-width: 1200px) {
+    width: 360px;
+    padding: 30px 35px 30px 35px;
+    margin: 0;
+
+    &:not(:last-child) {
+      margin-right: 37px;
+    }
+  }
 }
 
 .contacts_list-item_title {
@@ -53,6 +65,14 @@
   line-height: 14.4px;
   letter-spacing: 0.48px;
   text-transform: uppercase;
+
+  @media (min-width: 1200px) {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 140%;
+    letter-spacing: 4%;
+    padding: 4px 15px;
+  }
 }
 
 .contacts_list-item_location {
@@ -62,6 +82,12 @@
   font-size: 12px;
   line-height: 22.32px;
   letter-spacing: 0.48px;
+
+  @media (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 186%;
+    letter-spacing: 4%;
+  }
 }
 
 .contacts_list-item_address {
@@ -82,6 +108,24 @@
     width: 100%;
     height: 1px;
     background-color: #e1e1e1;
+
+    // @media (min-width: 1200px) {
+    //   bottom: 0;
+    // }
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 183%;
+    letter-spacing: 4%;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &:focus {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -97,6 +141,14 @@
     width: 100%;
     height: 1px;
     background-color: #e1e1e1;
+
+    @media (min-width: 1200px) {
+      bottom: -25px;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    margin: 45px 0;
   }
 }
 
@@ -107,6 +159,12 @@
   font-size: 12px;
   line-height: 22.32px;
   letter-spacing: 0;
+
+  @media (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 186%;
+    letter-spacing: 4%;
+  }
 }
 
 .contacts_list-item_time {
@@ -117,6 +175,11 @@
   line-height: 22.32px;
   letter-spacing: 0;
   color: #ababab;
+
+  @media (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 186%;
+  }
 }
 
 .contacts_list-item_contacts {
@@ -127,6 +190,11 @@
   line-height: 22.32px;
   letter-spacing: 0;
   color: $primary_text_color;
+
+  @media (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 150%;
+  }
 }
 
 .contacts_button-locations {
@@ -196,5 +264,9 @@
     align-items: center;
     justify-content: center;
     margin-top: 30px;
+  }
+
+  @media (min-width: 1200px) {
+    margin-top: 60px;
   }
 }
