--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -9,6 +9,19 @@
     align-items: center;
     justify-content: space-between;
   }
+
+  @media (min-width: 1200px) {
+    padding-top: 500px;
+  }
+}
+
+.footer_container {
+  @media (min-width: 1200px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 50px;
+  }
 }
 
 .footer_title-container {
@@ -30,6 +43,13 @@
     line-height: 100%;
     width: 352px;
   }
+
+  @media (min-width: 1200px) {
+    width: 600px;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 100%;
+  }
 }
 
 .footer_title2 {
@@ -44,6 +64,11 @@
   @media (min-width: 768px) {
     font-size: 48px;
     line-height: 100%;
+  }
+
+  @media (min-width: 1200px) {
+    font-size: 58px;
+    display: inline-block;
   }
 }
 
@@ -60,6 +85,13 @@
     font-size: 48px;
     line-height: 100%;
   }
+
+  @media (min-width: 1200px) {
+    display: inline-block;
+    font-size: 58px;
+    margin-left: 27px;
+    margin-top: 35px;
+  }
 }
 
 .footer_network-list {
@@ -68,6 +100,10 @@
   display: flex;
   justify-content: end;
   width: 100%;
+
+  @media (min-width: 1200px) {
+    margin-top: 25px;
+  }
 }
 
 .footer_network-list_item {
@@ -123,6 +159,10 @@
     margin: 40px 0 0 0;
     font-size: 14px;
   }
+
+  @media (min-width: 1200px) {
+    font-size: 16px;
+  }
 }
 
 .footer_contact-ph a {
@@ -140,9 +180,10 @@
   background-color: $background_color;
   position: relative;
 
-  @media (min-width: 768px) {
-    display: flex;
-    justify-content: center;
+  @media (min-width: 1200px) {
+    font-size: 12px;
+    line-height: 186%;
+    padding: 13px 0;
   }
 
   &::before {
@@ -158,4 +199,8 @@
 
 .back_footer p {
   margin: 0 0 0 5px;
+
+  @media (min-width: 768px) {
+    display: inline-block;
+  }
 }
