--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -11,6 +11,10 @@
   @media (min-width: 768px) {
     top: -150px;
   }
+
+  @media (min-width: 1200px) {
+    top: -100px;
+  }
 }
 
 .gallery_image {
