--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -5,29 +5,35 @@
   padding-bottom: 50px;
   background-image: url(../images/background_mobile.jpg);
   background-repeat: repeat-y;
-  background-size: 100vw;
-  width: 100vw;
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     background-image: url(../images/backgroud_mobile@2x.jpg);
     background-repeat: repeat-y;
-    background-size: 100vw;
   }
 
   @media (min-width: 768px) {
     background-image: url(../images/background_tablet.jpg);
     background-repeat: repeat-y;
-    background-size: 100vw;
-    width: 100vw;
 
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       background-image: url(../images/background_tablet@2x.jpg);
       background-repeat: repeat-y;
-      background-size: 100vw;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    background-image: url(../images/background_desktop.jpg);
+    background-repeat: repeat-y;
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/backgroud_desktop@2x.jpg);
+      background-repeat: repeat-y;
     }
   }
 }
@@ -41,6 +47,12 @@
   font-size: 18px;
   line-height: 21.94px;
   color: $primary_text_color;
+
+  @media (min-width: 1200px) {
+    padding-top: 70px;
+    font-size: 30px;
+    text-transform: uppercase;
+  }
 }
 
 .products h1 {
@@ -52,11 +64,15 @@
   line-height: 37.71px;
   color: $primary_text_color;
   letter-spacing: 4%;
+
+  @media (min-width: 1200px) {
+    font-size: 36px;
+    margin: 30px 0 0 0;
+  }
 }
 
 .products_list {
   padding: 0;
-  // max-width: 320px;
   margin-left: auto;
   margin-right: auto;
 
@@ -120,7 +136,11 @@
   @media (min-width: 768px) {
     max-width: 100%;
     display: flex;
-    // justify-content: space-between;
+  }
+
+  @media (min-width: 1200px) {
+    margin-top: 100px;
+    padding: 0;
   }
 }
 
@@ -134,6 +154,10 @@
     min-width: calc((100vw - 100px) / 3);
   }
 
+  @media (min-width: 1200px) {
+    max-width: 360px;
+  }
+
   &:first-child {
     background-color: #aec6a5;
   }
@@ -143,6 +167,10 @@
 
     @media (min-width: 768px) {
       margin: 120px 20px 0 20px;
+    }
+
+    @media (min-width: 1200px) {
+      margin: 120px 25px 0 25px;
     }
   }
 
@@ -164,6 +192,13 @@
   @media (min-width: 768px) {
     padding: 40px 30px 90px 30px;
   }
+
+  @media (min-width: 1200px) {
+    height: 200px;
+    padding: 50px 60px 50px 60px;
+    font-size: 16px;
+    line-height: 176%;
+  }
 }
 
 .products_list-name {
@@ -173,6 +208,11 @@
   font-size: 20px;
   font-weight: 700;
   line-height: 24.38px;
+
+  @media (min-width: 1200px) {
+    font-size: 30px;
+    line-height: 100%;
+  }
 }
 
 .products_list-item_button {
@@ -185,6 +225,11 @@
   height: 16px;
   background-color: transparent;
   border: 1px solid transparent;
+
+  @media (min-width: 1200px) {
+    margin-bottom: 20px;
+    padding: 40px 0 60px 0;
+  }
 }
 
 .products_list-item_button-arrow {
