--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -23,6 +23,18 @@
       background-size: 150vw;
     }
   }
+
+  @media (min-width: 1200px) {
+    background-image: url(../images/background_desktop.jpg);
+    padding: 0 30px 400px 30px;
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/backgroud_desktop@2x.jpg);
+      background-size: 150vw;
+    }
+  }
 }
 
 .reviews_slider {
@@ -35,6 +47,12 @@
 
   @media (min-width: 768px) {
     padding: 30px 0 0 0;
+  }
+
+  @media (min-width: 1200px) {
+    width: 1013px;
+    padding: 130px 0 0 0;
+    margin-left: 40px;
   }
 }
 
