--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -1,5 +1,6 @@
 body {
   font-family: $basic_font;
+  overflow-x: hidden;
 }
 
 .container {
@@ -20,6 +21,8 @@ body {
 
   @media (min-width: 1200px) {
     width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -89,6 +92,11 @@ a {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 200;
   overflow-y: scroll;
+  overflow-x: hidden;
+
+  @media (min-width: 1200px) {
+    padding: 0;
+  }
 }
 
 .modal_container {
